--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/andybuzzi/team-profile-generator/issues"
   },
-  "homepage": "https://github.com/andybuzzi/team-profile-generator#readme"
+  "homepage": "https://github.com/andybuzzi/team-profile-generator#readme",
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
